--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ h2 {
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
+  font-family: 'PT Sans', sans-serif;
 	font-size:13px;
 	padding:6px 28px;
 	text-decoration:none;
@@ -119,7 +119,7 @@ h2 {
 <div id="chart"></div>
 <div style="font-size:8pt; width:960px;">
 <div style="float:left; display:inline-block; font-style:italic">Median in white</div>
-<div style="float:right; display:inline-block">HadCRUT4 (<a   href="http://www.metoffice.gov.uk/hadobs/hadcrut4/index.html">http://www.metoffice.gov.uk/hadobs/hadcrut4/index.html</a>)</div>
+<div style="float:right; display:inline-block">HadCRUT4 (<a href="http://www.metoffice.gov.uk/hadobs/hadcrut4/index.html">http://www.metoffice.gov.uk/hadobs/hadcrut4/index.html</a>)</div>
 </div>
 <script>
 
